--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     
     <div id="mainView">
-      Types: <input id="typesFilter" type="text" />
+      Type: <input id="typesFilter" type="text" />
       <div id="content">          
       </div>
       <div style="clear:both"></div>      
@@ -40,6 +40,7 @@
           <div class="image">
             <img data-src="{image}"/>
           </div>
+          <div class="name">{name} #{pkdx_id}</div>
           <table>
               <tr><td>Type</td><td>{allTypes}</td></tr>
               <tr><td>Attack</td><td>{attack}</td></tr>
